# wbms_georef

./: .gitignore  CHANGES.md  CMakeLists.txt  LICENSE  README.md  TODO
.github/workflows/: cmake.yml  cmake_windows.yml
cmake/modules/: FindCPUflags.cmake
doc/: CMakeLists.txt  Lidar_default_mounting.dxf  README.md  Sonar_default_mounting.dxf  ara_models.py  cord_system.dxf  wbms_georef.conf.md  wbms_georef.conf.template
man/: CMakeLists.txt  wbms_georef.1
src/: .reson7k.c.swp  .wbms_georef.c.swp  3dss_dx.c  3dss_dx.h  CMakeLists.txt  Makefile  bathy_packet.h  bin_output.c  bin_output.h  classification.c  classification.h  cmath.c  cmath.h  crc32.c  crc32.h  crc32table.h  csv_nav.c  csv_nav.h  csv_output.c  csv_output.h  eelume_sbd_nav.c  eelume_sbd_nav.h  georef_tools.c  georef_tools.h  gsf.c  gsf.h  gsf_dec.c  gsf_enc.c  gsf_ft.h  gsf_indx.c  gsf_wrapper.c  gsf_wrapper.h  intensity_scaling.c  intensity_scaling.h  json_output.c  json_output.h  lakibeam.c  lakibeam.h  linalg.c  linalg.h  (+51 more)
